Fixed description for waveformr projects and spacing for h2 in project blocks.

--- a/simple.css
+++ b/simple.css
@@ -356,6 +356,11 @@ aside {
   margin-inline: 1rem .5rem;
 }
 
+.project h2{
+  margin: 0 0rem 3rem 0;
+}
+
+
 /* Make aside full-width on mobile */
 @media only screen and (max-width: 720px) {
   aside {
